
PIG-2966: Test failures on CentOS 6 because MALLOC_ARENA_MAX is not set (cheolsoo via sms)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-3025: TestPruneColumn unit test - SimpleEchoStreamingCommand perl inline script needs simplification (dwann via daijy)

PIG-2955: Fix bunch of Pig e2e tests on Windows (daijy)

PIG:3302: JSONStorage throws NPE if map has null values (rohini)

PIG-3309: TestJsonLoaderStorage fails with IBM JDK 6/7 (lrangel via daijy)

PIG-3097: HiveColumnarLoader doesn't correctly load partitioned Hive table (maczech via daijy)

PIG-3305: Infinite loop when input path contains empty partition directory (maczech via daijy)

PIG-3286: TestPigContext.testImportList fails in trunk (cheolsoo)

PIG-2970: Nested foreach getting incorrect schema when having unrelated inner query (daijy)

PIG-3304: XMLLoader in piggybank does not work with inline closed tags (aseldawy via daijy)

PIG-3028: testGrunt dev test needs some command filters to run correctly without cygwin (jgordon via gates)

PIG-3290: TestLogicalPlanBuilder.testQuery85 fail in trunk (daijy)

PIG-3027: pigTest unit test needs a newline filter for comparisons of golden multi-line (jgordon via gates)

PIG-2767: Pig creates wrong schema after dereferencing nested tuple fields (daijy)

PIG-3276: change the default value for hcat.bin to hcat instead of /usr/local/hcat/bin/hcat (arpitgupta via daijy)

PIG-3277: fix the path to the benchmarks file in the print statement (arpitgupta via daijy)

PIG-3122: Operators should not implicitly become reserved keywords (jcoveney via cheolsoo)

PIG-3193: Fix "ant docs" warnings (cheolsoo)

PIG-3186: tar/deb/pkg ant targets should depend on piggybank (lbendig via gates)
